# shml-platform

./: .clinerules  .coveragerc  .env.example  .envrc  .gitguardian.yaml  .gitguardian.yml  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  .hadolint.yaml  .hermes.md  .pre-commit-config.yaml  404.html  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dangerfile  GITHUB_SECRETS.md  HEARTBEAT.md  IDENTITY.md  LESSONS_LEARNED.md  LICENSE  MONETIZATION_STRATEGY.md  OPENCODE.md  RAY_GPU_TESTING_SUMMARY.md  README.md  REMOTE_ACCESS_NEW.md  REMOTE_JOB_SUBMISSION.md  REMOTE_QUICK_REFERENCE.md  SELF_HOSTED_PREMIUM_FEATURES.md  SETUP_COMPLETE.md  SETUP_SCRIPT_README.md  SOUL.md  TOOLS.md  TROUBLESHOOTING.md  Taskfile.yml  (+45 more)
.agent/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
.claude/: CLAUDE.md  settings.json
.githooks/: pre-push
.github/: copilot-instructions.md  public-mirror-allowlist.txt  public-mirror-denylist.txt  publication-gates.md
.openclaw/: CONTEXT.md  governance.policy.yaml  workspace-state.json
.opencode/: README.md  config-enhanced.toml  config.toml  opencode.json
admin/: index.html
api/: index.html
archived/: opencode_demo.sh  ray_compute_server_legacy.py
chat-ui/: docker-compose.yml  index.html  tailwind.config.js  vite.config.ts
chat-ui-v2/: components.json  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
cli/: README.md  aliases.sh  index.html  setup.sh  shml.py
config/: mlflow.env  nessie.env  platform.env
contributing/: index.html
data-pipelines/: README.md
docs/: ARCHITECTURE_REDESIGN.md  CONSOLIDATION_SUMMARY.md  CURSOR_SETUP.md  GPU_ORCHESTRATION_ANALYSIS.md  GRAFANA_DASHBOARD_CONSOLIDATION.md  LESSONS_LEARNED.md  MLFLOW_GOVERNANCE_RESEARCH.md  MLFLOW_VERIFICATION.md  PHASE1_LAUNCH_READY.md  PLATFORM_IMPROVEMENTS_PROJECT_BOARD.md  PR7_COPILOT_REVIEW_ANALYSIS.md  RAY_DASHBOARD_OBSERVABILITY.md  REORGANIZATION_QUICKSTART.md  TAILSCALE_RECOVERY.md  TRAINING_LIBRARY_INTEGRATION.md  contributing.md  index.md
fusionauth/: setup-jwt-lambda.sh  verify-identity-providers.sh
inference/: .gitignore  __init__.py  benchmark_models.py  docker-compose.hardening.yml  docker-compose.inference.yml  test-fusionauth-integration.sh
libs/: __init__.py  notify.py  shml_features.py  shml_spark.py
libs/client/: README.md  pyproject.toml  setup.py
libs/client/shml/: __init__.py  cli.py  client.py  config.py  models.py  shortcuts.py
libs/client/shml/admin/: __init__.py  cli.py  config.py  exceptions.py
libs/client/shml/admin/bootstrap/: __init__.py  create_test_keys.py
libs/client/shml/admin/services/: __init__.py  applications.py  base.py  roles.py
mcp/: mcp-config.json
mlflow-server/: .dockerignore  .gitignore  README.md  STOP_SERVICES.sh  docker-compose.dev.yml  docker-compose.yml  prometheus.yml
monitoring/: global-prometheus.yml
postgres/: Dockerfile  (+1 more)
sdk/: index.html  pyproject.toml
sdk/client/: index.html
sdk/config/: index.html
sdk/integrations/feature-store/: index.html
sdk/integrations/fiftyone/: index.html
sdk/integrations/mlflow/: index.html
sdk/integrations/nessie/: index.html
sdk/integrations/prometheus/: index.html
sdk/shml/: __init__.py  client.py  config.py  exceptions.py  main.py
sdk/shml/integrations/: __init__.py  features.py  fiftyone.py  mlflow.py  nessie.py  prometheus.py
sdk/shml/training/: __init__.py  runner.py
sdk/tests/: test_client.py  test_config.py  test_exceptions.py
sdk/training-profiles/: index.html
sdk/training-runner/: index.html
(+1385 files in other folders)
