[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shml-sdk"
version = "1.0.0"
description = "SHML Platform SDK — unified CLI, client library, and config-driven ML workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SHML Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
training = [
    "mlflow>=2.0.0",
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "fiftyone>=1.0.0",
    "prometheus-client>=0.17.0",
]
all = ["shml-sdk[dev,training]"]

[project.scripts]
shml = "shml.main:app_entry"

[project.urls]
Homepage = "https://github.com/shml-platform/shml-sdk"
Documentation = "https://shml-platform.github.io/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["shml*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
