[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shml-client"
version = "0.1.0"
description = "Python client for SHML Platform Ray Compute API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "axelofwar", email = "platform@shml.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ml", "machine-learning", "ray", "gpu", "compute", "api", "client"]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
shml = "shml.cli:main"

[project.urls]
Homepage = "https://github.com/axelofwar/shml-platform"
Documentation = "https://github.com/axelofwar/shml-platform/tree/main/libs/client"
Repository = "https://github.com/axelofwar/shml-platform"
Issues = "https://github.com/axelofwar/shml-platform/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shml*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
